lab-02-actual/Syntax/Nameless/Par.y
-- This Happy file was machine-generated by the BNF converter
{
{-# OPTIONS_GHC -fno-warn-incomplete-patterns -fno-warn-overlapping-patterns #-}
module Syntax.Nameless.Par
  ( happyError
  , myLexer
  , pExpr
  , pType
  ) where

import Prelude

import qualified Syntax.Nameless.Abs
import Syntax.Nameless.Lex

}

%name pExpr Expr
%name pType Type
-- no lexer declaration
%monad { Err } { (>>=) } { return }
%tokentype {Token}
%token
  '(' { PT _ (TS _ 1) }
  ')' { PT _ (TS _ 2) }
  '->' { PT _ (TS _ 3) }
  '0' { PT _ (TS _ 4) }
  'Bool' { PT _ (TS _ 5) }
  'Nat' { PT _ (TS _ 6) }
  '[' { PT _ (TS _ 7) }
  ']' { PT _ (TS _ 8) }
  'else' { PT _ (TS _ 9) }
  'false' { PT _ (TS _ 10) }
  'fun' { PT _ (TS _ 11) }
  'if' { PT _ (TS _ 12) }
  'iszero' { PT _ (TS _ 13) }
  'pred' { PT _ (TS _ 14) }
  'return' { PT _ (TS _ 15) }
  'succ' { PT _ (TS _ 16) }
  'then' { PT _ (TS _ 17) }
  'true' { PT _ (TS _ 18) }
  '{' { PT _ (TS _ 19) }
  '}' { PT _ (TS _ 20) }
  L_Ident  { PT _ (TV $$) }
  L_integ  { PT _ (TI $$) }

%%

Ident :: { Syntax.Nameless.Abs.Ident }
Ident  : L_Ident { Syntax.Nameless.Abs.Ident $1 }

Integer :: { Integer }
Integer  : L_integ  { (read $1) :: Integer }

Expr :: { Syntax.Nameless.Abs.Expr }
Expr : 'true' { Syntax.Nameless.Abs.ConstTrue }
     | 'false' { Syntax.Nameless.Abs.ConstFalse }
     | 'if' Expr 'then' Expr 'else' Expr { Syntax.Nameless.Abs.If $2 $4 $6 }
     | '0' { Syntax.Nameless.Abs.ConstZero }
     | 'succ' Expr { Syntax.Nameless.Abs.Succ $2 }
     | 'pred' Expr { Syntax.Nameless.Abs.Pred $2 }
     | 'iszero' Expr { Syntax.Nameless.Abs.IsZero $2 }
     | Ident { Syntax.Nameless.Abs.FreeVar $1 }
     | '[' Integer ']' { Syntax.Nameless.Abs.BoundVar $2 }
     | 'fun' '(' Type ')' '{' 'return' Expr '}' { Syntax.Nameless.Abs.Abstraction $3 $7 }
     | Expr Expr { Syntax.Nameless.Abs.Application $1 $2 }
     | '(' Expr ')' { $2 }

Type :: { Syntax.Nameless.Abs.Type }
Type : 'Bool' { Syntax.Nameless.Abs.BoolType }
     | 'Nat' { Syntax.Nameless.Abs.NatType }
     | Type '->' Type { Syntax.Nameless.Abs.FunType $1 $3 }
     | '(' Type ')' { $2 }
{

type Err = Either String

happyError :: [Token] -> Err a
happyError ts = Left $
  "syntax error at " ++ tokenPos ts ++
  case ts of
    []      -> []
    [Err _] -> " due to lexer error"
    t:_     -> " before `" ++ (prToken t) ++ "'"

myLexer :: String -> [Token]
myLexer = tokens

}
